// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-slider slider-picker"
  >
    <div
      class="rc-slider__hue"
    >
      <div
        class="rc-hue-control"
        style="border-radius: 2px;"
      >
        <div
          class="rc-hue-control__container"
          style="border-radius: 2px; background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
        >
          <div
            class="rc-hue-control__pointer"
            style="left: 69.44444444444443%;"
          >
            <div
              class="rc-slider__pointer"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-slider__swatches-wrap"
    >
      <div
        class="rc-slider__swatches"
      >
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            class="rc-slider__swatch rc-slider--first"
            style="background: rgb(187, 179, 230);"
          />
        </div>
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            class="rc-slider__swatch"
            style="background: rgb(136, 121, 210);"
          />
        </div>
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            class="rc-slider__swatch"
            style="background: rgb(85, 64, 191);"
          />
        </div>
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            class="rc-slider__swatch"
            style="background: rgb(60, 45, 134);"
          />
        </div>
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            class="rc-slider__swatch rc-slider--active rc-slider--last"
            style="background: rgb(34, 26, 77);"
          />
        </div>
        <div
          class="rc-slider__clear"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SliderPointer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-slider__pointer"
  />
</DocumentFragment>
`;

exports[`SliderSwatch renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-slider__swatch"
  />
</DocumentFragment>
`;

exports[`SliderSwatches renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-slider__swatches"
  >
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        class="rc-slider__swatch rc-slider--first"
        style="background: rgb(230, 179, 179);"
      />
    </div>
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        class="rc-slider__swatch"
        style="background: rgb(210, 121, 121);"
      />
    </div>
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        class="rc-slider__swatch"
        style="background: rgb(191, 64, 64);"
      />
    </div>
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        class="rc-slider__swatch"
        style="background: rgb(134, 45, 45);"
      />
    </div>
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        class="rc-slider__swatch rc-slider--last"
        style="background: rgb(77, 26, 26);"
      />
    </div>
    <div
      class="rc-slider__clear"
    />
  </div>
</DocumentFragment>
`;
